Updated to account for Juli's suggestions